fixed name to not be hidden by stickied nav

--- a/src/component/Champion/champion.scss
+++ b/src/component/Champion/champion.scss
@@ -20,6 +20,10 @@ div.display-champ {
         margin: 10px;
     }
 
+    h3.champ-name {
+        margin-top: 56px;
+    }
+
     h4 {
         font-family: 'Quicksand', sans-serif;
         margin: 8px;
